# hyped-2023

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  Dockerfile  README.md  docker-compose.yml  docker.sh  ros_entrypoint.sh
.github/workflows/: build.yml  lint.yml  telemetry.yml
config/: template.json
lib/: CMakeLists.txt
lib/brakes/: brakes.cpp  brakes.hpp
lib/core/: CMakeLists.txt  logger.cpp  logger.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp  types.hpp  wall_clock.cpp  wall_clock.hpp
lib/debug/: CMakeLists.txt  repl.cpp  repl.hpp
lib/helper/: CMakeLists.txt  manual_time.cpp  manual_time.hpp  naive_navigator.cpp  naive_navigator.hpp
lib/io/: CMakeLists.txt  adc.cpp  adc.hpp  can.cpp  can.hpp  gpio.cpp  gpio.hpp  gpio_reader.cpp  gpio_reader.hpp  gpio_writer.cpp  gpio_writer.hpp  hardware_adc.cpp  hardware_adc.hpp  hardware_can.cpp  hardware_can.hpp  hardware_gpio.cpp  hardware_gpio.hpp  hardware_gpio_alt.cpp  hardware_gpio_alt.hpp  hardware_i2c.cpp  hardware_i2c.hpp  hardware_spi.cpp  hardware_spi.hpp  hardware_uart.cpp  hardware_uart.hpp  i2c.cpp  i2c.hpp  pwm.cpp  pwm.hpp  real_gpio.cpp  real_gpio.hpp  spi.cpp  spi.hpp  uart.cpp  uart.hpp
lib/motorcontrollers/: CMakeLists.txt  can_processor.cpp  can_processor.hpp  controller.cpp  controller.hpp  main.cpp  main.hpp  messages.hpp  state_processor.cpp  state_processor.hpp
lib/motors/: CMakeLists.txt  can_processor.cpp  can_processor.hpp  constant_frequency_calculator.cpp  constant_frequency_calculator.hpp  controller.cpp  controller.hpp  frequency_calculator.hpp  main.cpp  main.hpp  messages.hpp  messages.json  state_processor.cpp  state_processor.hpp  time_frequency_calculator.cpp  time_frequency_calculator.hpp
lib/navigation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  accelerometer_kalman.cpp  accelerometer_kalman.hpp  accelerometer_trajectory.cpp  accelerometer_trajectory.hpp  cmake_install.cmake  consts.hpp  crosscheck.cpp  crosscheck.hpp  extended_kalman_filter.hpp  imu_displacement.cpp  imu_displacement.hpp  kalman_filter.hpp  main.cpp  main.hpp  navigator.cpp  navigator.hpp  preprocess_accelerometer.cpp  preprocess_accelerometer.hpp  preprocess_encoders.cpp  preprocess_encoders.hpp  preprocess_imu.cpp  preprocess_imu.hpp  preprocess_keyence.cpp  preprocess_keyence.hpp  preprocessing.cpp  preprocessing.hpp  types.hpp
lib/navigation/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  benchmarker.hpp  data.cpp  data.hpp
lib/navigation/control/: consts.hpp  crosscheck.cpp  crosscheck.hpp  navigator.cpp  navigator.hpp
lib/navigation/filtering/: accelerometer_kalman.cpp  accelerometer_kalman.hpp  extended_kalman_filter.hpp  kalman_filter.hpp  running_means_filter.hpp
lib/navigation/preprocessing/: accelerometer_trajectory.cpp  preprocess_accelerometer.hpp  preprocess_encoders.cpp  preprocess_encoders.hpp
lib/sensors/: CMakeLists.txt  accelerometer.cpp  accelerometer.hpp  analogue_mux.hpp  bms.cpp  bms.hpp  bms_processor.cpp  bms_processor.hpp  gyroscope.cpp  gyroscope.hpp  i2c_converter.hpp  i2c_mux.hpp  i2c_sensors.hpp  imd.cpp  imd.hpp  imd_processor.cpp  imd_processor.hpp  keyence.cpp  keyence.hpp  low_power_current.cpp  low_power_current.hpp  mux.cpp  mux.hpp  mux_sensors.hpp  pressure.cpp  pressure.hpp  sensors.cpp  sensors.hpp  stripe_sensor.cpp  stripe_sensor.hpp  temperature.cpp  temperature.hpp  thermister.cpp  thermister.hpp  thermistor.cpp  thermistor.hpp  wheel_encoder.cpp  wheel_encoder.hpp
lib/state_machine/: CMakeLists.txt  consts.hpp  message.hpp  state.cpp  state.hpp  state_machine.cpp  state_machine.hpp  transition.cpp  transition.hpp  types.hpp
lib/utils/: CMakeLists.txt  dummy_adc.cpp  dummy_adc.hpp  dummy_adc_mux_sensor.cpp  dummy_adc_mux_sensor.hpp  dummy_gpio.cpp  dummy_gpio.hpp  dummy_i2c.cpp  dummy_i2c.hpp  dummy_i2c_sensor.cpp  dummy_i2c_sensor.hpp  dummy_spi.hpp  dummy_uart.hpp  hash.hpp  kalman_higher_derivatives.cpp  kalman_higher_derivatives.hpp  logger.cpp  logger.hpp  manual_time.cpp  manual_time.hpp  naive_navigator.cpp  naive_navigator.hpp  numerical_jerk_snap.cpp  numerical_jerk_snap.hpp
scripts/: format  setup
scripts/hooks/: pre-commit
src/: CMakeLists.txt
src/debugger/: CMakeLists.txt  main.cpp
src/nodes/csv_logger/: CMakeLists.txt  package.xml
src/nodes/csv_logger/src/: listener.cpp
src/nodes/random_data/: CMakeLists.txt  package.xml
src/nodes/random_data/src/: publisher.cpp
src/pod/: CMakeLists.txt  main.cpp
src/ros/hyped_messages/: CMakeLists.txt  package.xml
src/ros/hyped_messages/msg/: Acceleration.msg  IMUs.msg  Trajectory.msg
src/ros/ros_to_mqtt/: config.yaml  package.xml  setup.cfg  setup.py
src/ros/ros_to_mqtt/ros_to_mqtt/: mqtt_listener.py  mqtt_test_publisher.py  ros_listener.py  ros_test_publisher.py  ros_to_mqtt.py  test_publisher.py
src/ros/statemachine/: CMakeLists.txt  package.xml
src/ros/statemachine/launch/: stm.xml  stm.yaml
src/ros/statemachine/src/: publisher.cpp  publisher1.cpp  publisher2.cpp  publisher3.cpp  publisher4.cpp  publisherTest.cpp  pubsubtest.cpp  stm1.cpp  stm2.cpp  stm3.cpp  stm4.cpp  subscriber1.cpp  subscriber2.cpp  subscriber3.cpp  subscriber4.cpp  subscriberTest.cpp  transitionpublisher.cpp
telemetry/: .gitignore  package-lock.json  package.json  tcp_to_mqtt.py  turbo.json
telemetry/mqtt/: latency.ts  latency_test.py  main.py  mqtt_to_tcp.py  sender.py  tcp_to_mqtt.py
telemetry/patches/: @nestjs+common+9.2.1.patch  @nestjs+common+9.3.9.patch  openmct+2.1.5.patch
test/: CMakeLists.txt
test/core/: CMakeLists.txt  libraries.cpp  logger.cpp
test/helper/: CMakeLists.txt  manual_time.cpp  naive_navigator.cpp
test/navigation/: CMakeLists.txt  accelerometer_preprocessing.cpp  accelerometer_trajectory_estimator.cpp  imu_preprocessing.cpp  kalman_filter.cpp  keyence_preprocessing.cpp  navigation.cpp  navigator.cpp  preprocess_encoders.cpp  running_means_filter.cpp
test/navigation/benchmark/: CMakeLists.txt  benchmark.cpp
test/sensors/: adc_mux.cpp  i2c_mux.cpp  mux.cpp
test/state_machine/: stm_tests.cpp
test/utils/: CMakeLists.txt  dummy_gpio.cpp  (+4 more)
(+9 files in other folders)
